[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "response-network-api"
version = "0.1.0"
authors = [
  { name="Author" }
]
description = "Response Network API"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]